[gd_scene load_steps=8 format=3 uid="uid://b4dtkh2ffgerw"]

[ext_resource type="Script" uid="uid://cndjhw50haeyr" path="res://Scripts/shop_card.gd" id="1_yligq"]
[ext_resource type="Texture2D" uid="uid://k5d5dxnjywrd" path="res://Assets/Sprites/card_comps/card.png" id="2_kuaw8"]
[ext_resource type="Texture2D" uid="uid://ccp3n4a2qtcg6" path="res://Assets/Sprites/card_comps/ingredient_logos.png" id="3_tnjfn"]
[ext_resource type="Script" uid="uid://bn6ne0dgltx8" path="res://Scripts/ingredient_logo.gd" id="4_btjuf"]
[ext_resource type="Script" uid="uid://knje4y7a1nan" path="res://Scripts/price_circle.gd" id="5_btjuf"]
[ext_resource type="Texture2D" uid="uid://dbcy75wineott" path="res://Assets/Sprites/card_comps/price_circle.png" id="6_5b513"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qxyw4"]

[node name="shop_card" type="Node2D"]
script = ExtResource("1_yligq")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_qxyw4")

[node name="blank" type="Sprite2D" parent="."]
texture = ExtResource("2_kuaw8")

[node name="ingredient_logo" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("3_tnjfn")
region_enabled = true
region_rect = Rect2(16, 0, 16, 16)
script = ExtResource("4_btjuf")

[node name="price_circle" type="Node2D" parent="."]
position = Vector2(11, -20)
script = ExtResource("5_btjuf")

[node name="circle" type="Sprite2D" parent="price_circle"]
texture = ExtResource("6_5b513")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
